genie/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Dancing+Script&family=Lato&display=swap');

#content {
    max-width: 1200px;
    margin: 0 auto;
    
   
}

body {
    background-color: #fcfafa;
}

main {
    padding: 0 50px;
    
}

nav {
    display: flex;
    justify-content: space-around;
    /* background-color: #6e8387; */
}

nav a {
    text-align: center;
    color: #14110f;
    text-decoration: none;
    font-family: Lato, Helvetica, sans-serif;
    padding: 35px;
    font-size: 1.5em;
}

nav a:hover {
    background-color: #81d652;
}

header {
    /* background-color: #6e8387; */
    display: grid;
    grid-template-columns: 100px auto;
}

.logo {
    width: 80px;
    display: flex;
    margin: auto;
    padding-top: 5px;
}

h1, h2, h3, h4 {
    text-align: center;
    font-family: Lato, Helvetica, sans-serif;
    font-size: 3em;
    color: #489ff8;
}

.stacked-img {
    max-width: 70%;
    display: flex;
    margin: 2em auto 3em auto;
}

p {
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.25em;
    margin: 0 0 1.5em 0;
    color: #6e8387;
}

.right-img-block {
display: flex;
flex-direction: row;
width: 100%;
margin: 2em auto 0 auto;
}

.text-block {
display: flex;
flex-direction: column;
width: 100%;
margin: 2em auto 0 auto;
}

#text-left {
    display: flex;
    width: 60%;
}

.right-img {
    display: flex;
    max-width: 40%;
    height: 100%;
    margin-left: 3em;
}

.left-img {
    display: flex;
    max-width: 15%;
    height: 100%;
    margin-right: 3em;
}

.stacked {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 2em auto 0 auto;
}

footer {
    background-color: #81d652;
    color: #fcfafa;
    padding: 1em 3em;
    margin-top: 3em;
    display: flex;
    justify-content: space-between;
}

footer p {
    font-family: Lato, Helvetica, sans-serif;
    color: #fcfafa;
    padding-top: 20px;
}
footer a {
    color: #fcfafa;
    text-decoration: none;
    padding: 25px;
    background-color: #489ff8;
}

footer a:hover {
    background-color: #fcfafa;
    color:#81d652;
}

@media screen and (max-width: 1200px) {
.right-img-block {
    flex-direction: column;
    /* margin: 2em; */
    width: 100%;
}

.text-block {
  width: 100%;
  margin: 2em auto 0 auto;
}
.stacked {
    width: 100%;
    margin: 0;
}

.right-img {
    margin: 20px auto 0 auto;
}
.left-img {
    max-width: 300px;
    margin: 20px auto 50px auto;
}

nav a {
    font-size: 1em;
    padding: 35px 20px;
}
footer p {
    font-size: 1em;
}

footer a {
    padding: 10px;
}
p {
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.25em;
    margin: 0 0 1.5em 0;
}
}

